# RAG-Proj02

./: README.md  SNOMED_数据库详解.md  pyproject.toml  requirements_mac(no GPU).txt  requirements_ubun(with GPU).txt
backend/: main.py
backend/services/: std_service.py
backend/tools/: create_milvus_db.ipynb  show_snomed_file.ipynb
backend/tools/.ipynb_checkpoints/: show_snomed_file-checkpoint.ipynb
frontend/public/: index.html
frontend/src/components/: Sidebar.js
frontend/src/pages/: AbbrPage.js  CorrPage.js  GenPage.js  NERPage.js  StdPage.js
