[project]
name = "rag-proj02"
version = "0.1.0"
description = "医疗服务平台"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "boto3==1.35.49",
    "botocore==1.35.49",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "coloredlogs==15.0.1",
    "dataclasses-json==0.6.7",
    "datasets==3.0.1",
    "dill==0.3.8",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "einops==0.8.0",
    "email_validator==2.2.0",
    "environs==9.5.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.111.1",
    "fastapi-cli==0.0.4",
    "filelock==3.15.4",
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "flatbuffers==24.3.25",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "greenlet==3.0.3",
    "grpcio==1.63.0",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "huggingface-hub==0.24.5",
    "humanfriendly==10.0",
    "idna==3.7",
    "interchange==2021.0.4",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "langchain==0.2.8",
    "langchain-community==0.2.7",
    "langchain-core==0.2.20",
    "langchain-experimental==0.0.62",
    "langchain-huggingface==0.0.3",
    "langchain-milvus==0.1.1",
    "langchain-openai==0.1.16",
    "langchain-text-splitters==0.2.2",
    "langgraph==0.1.8",
    "langserve==0.2.2",
    "langsmith==0.1.88",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "marshmallow==3.21.3",
    "mdurl==0.1.2",
    "milvus-lite==2.4.8",
    "milvus-model==0.2.4",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "neo4j==5.23.1",
    "networkx==3.3",
    "numpy",
    "pymilvus>=2.5.15",
]
